--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,7 @@ padding-right:600px;
 }
 
 footer {
-	background-color:#e74c3c;
+	background-color:#48D1CC;
 	width:1349px;
 	height:650px;
 }
@@ -70,7 +70,7 @@ footer {
 	width:1349px;
 }
 #slide-4 {
-	color:black;
+	color:navy;
 	font-size:20px;
 	font-family:Baskerville Old Face;
 	text-align:center;
@@ -90,6 +90,9 @@ footer {
 		height:200px;
 		width:300px
 	}
+	
+	
+	
 	
 	
 	
